<?xml version="1.0"?>
<package format="2">
  <name>TAITA_ROS_Ocam</name>
  <version>0.0.0</version>
  <description>The TAITA_ROS_Ocam package</description>

  <maintainer email="punyapat.areerob@mail.kmutt.ac.th">TAI</maintainer>

  <license>TODO</license>

  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>std_msgs</depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>opencv2</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>opencv2</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <export>

  </export>
</package>
